--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,3 +43,32 @@ jobs:
         
       - name: Print Happy message for CI for CI finish
         run: echo "CI part finished successfully"
+
+  my-cd-part:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: [my-ci-part]
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    
+      - name: Configure my AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.MY_AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
+          aws-region: ${{ env.AWS_REGION_NAME }}
+          
+      - name: Create new Beanstalk App version
+        run: |
+          aws elasticbeanstalk create-application.version \
+          --application-name ${{ env.EB_APPLICATION_NAME }} \
+          --source-bundle S3Bucket="${{ env.EB_PACKAGE_S3_BUCKET_NAME }}",S3Key="${{ env.DEPLOY_PACKAGE_NAME }}" \
+          --version-label "Ver-${{ github.sha }}" \
+          --description "CommitSHA-${{ github.sha }}"
+      - name: Deploy new Elastic Beankstalk App Version
+        run: aws elasticbeanstalk update-environment --environment-name ${{ env.EB_ENVIRON_NAME }} --version-label "Ver-${{ github.sha }}"
+      
+      - name: Print Happy message for CD for CD finish
+        run: echo "CD part finished successfully" 
+      
