--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ env:
   EB_ENVIRON_NAME: "Myflask-env"
   DEPLOY_PACKAGE_NAME: "flask_app${{ github.sha }}.zip"
   AWS_REGION_NAME: "eu-central-1"
+  AWS_REGION_NAME_CD: "eu-north-1"
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
@@ -57,7 +58,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.MY_AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
-          aws-region: ${{ env.AWS_REGION_NAME }}
+          aws-region: ${{ env.AWS_REGION_NAME_CD }}
           
       - name: Create new Beanstalk App version
         run: |
