--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.MY_AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
-          aws-region: ${{ env.AWS_REGION_NAME_CD }}
+          aws-region: ${{ env.AWS_REGION_NAME }}
           
       - name: Create new Beanstalk App version
         run: |
