--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,7 @@ env:
   EB_APPLICATION_NAME: "myflask"
   EB_ENVIRON_NAME: "Myflask-env"
   DEPLOY_PACKAGE_NAME: "flask_app${{ github.sha }}.zip"
-  AWS_REGION_NAME: "eu-central-1"
-  AWS_REGION_NAME_CD: "eu-north-1"
+  AWS_REGION_NAME: "eu-north-1"
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
